modal not scrolling on mobile fix

--- a/assets/styles/alumni.css
+++ b/assets/styles/alumni.css
@@ -168,4 +168,7 @@
   .alumni-modal-heading {
     font-size: 2em;
   }
+  .alumni-carousel-container {
+    font-size: 12px;
+  }
 }
